NURSING-8849: Fix extra space on review test page when lightbulb helper text is removed

--- a/src/app/css/style.css
+++ b/src/app/css/style.css
@@ -3158,6 +3158,9 @@ select.mobile-device {
   width: 100%;
   height: 100% !important;
   opacity: 0; }
+  
+.bootstrap-select.disabled {
+opacity: .5; }
 
 /*# sourceMappingURL=bootstrap-select.css.map */
 .bootstrap-select .dropdown-menu {
